--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "learn-koa2-tutorial",
   "version": "1.0.0",
   "description": "学习koa2",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/xiaobaifeng/learn-koa2-tutorial/issues"
   },
-  "homepage": "https://github.com/xiaobaifeng/learn-koa2-tutorial#readme"
+  "homepage": "https://github.com/xiaobaifeng/learn-koa2-tutorial#readme",
+  "dependencies": {
+    "koa": "^2.8.2"
+  }
 }
