--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "koa-bodyparser": "^4.2.1",
     "koa-nunjucks-2": "^3.0.2",
     "koa-router": "^7.4.0",
-    "koa-static": "^5.0.0"
+    "koa-static": "^5.0.0",
+    "log4js": "^5.2.2"
   },
   "devDependencies": {
     "address": "^1.1.2",
