--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "node app.js"
+    "server": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -31,6 +31,7 @@
     "log4js": "^5.2.2"
   },
   "devDependencies": {
+    "nodemon": "^1.19.3",
     "opn": "^6.0.0"
   }
 }
