--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "server": "nodemon app.js",
     "deploy": "pm2 deploy production update"
   },
+  "engines": {
+    "node": ">= 10.16.3",
+    "npm": ">= 6.9.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/xiaobaifeng/learn-koa2-tutorial.git"
